working on some styling

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,19 @@
       "name": "StarwarsCountdown",
       "path": "",
       "files": {
+        "52188892": {
+          "id": "52188892",
+          "path": "assets/star wars stormtroopers fun art simple background 1920x1200 wallpaper_www.wallpapername.com_72.jpg",
+          "output": "assets/star wars stormtroopers fun art simple background 1920x1200 wallpaper_www.wallpapername.com_72.jpg",
+          "name": "star wars stormtroopers fun art simple background 1920x1200 wallpaper_www.wallpapername.com_72.jpg",
+          "category": "IMAGE",
+          "size": 27503,
+          "type": "jpg",
+          "initialSize": 27503,
+          "optimized": false,
+          "height": 262,
+          "width": 420
+        },
         "2e8f9ea2": {
           "id": "2e8f9ea2",
           "path": "README.md",
@@ -126,6 +139,19 @@
             "cd07ef67"
           ],
           "type": "sass"
+        },
+        "34fc594f": {
+          "id": "34fc594f",
+          "path": "assets/background1.jpg",
+          "output": "assets/background1.jpg",
+          "name": "background1.jpg",
+          "category": "IMAGE",
+          "size": 191029,
+          "type": "jpg",
+          "initialSize": 191029,
+          "optimized": false,
+          "height": 1080,
+          "width": 1920
         }
       },
       "deploymentHistory": {},
