added rest of styling + initial js

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,19 +9,6 @@
       "name": "StarwarsCountdown",
       "path": "",
       "files": {
-        "52188892": {
-          "id": "52188892",
-          "path": "assets/star wars stormtroopers fun art simple background 1920x1200 wallpaper_www.wallpapername.com_72.jpg",
-          "output": "assets/star wars stormtroopers fun art simple background 1920x1200 wallpaper_www.wallpapername.com_72.jpg",
-          "name": "star wars stormtroopers fun art simple background 1920x1200 wallpaper_www.wallpapername.com_72.jpg",
-          "category": "IMAGE",
-          "size": 27503,
-          "type": "jpg",
-          "initialSize": 27503,
-          "optimized": false,
-          "height": 262,
-          "width": 420
-        },
         "2e8f9ea2": {
           "id": "2e8f9ea2",
           "path": "README.md",
@@ -140,18 +127,46 @@
           ],
           "type": "sass"
         },
-        "34fc594f": {
-          "id": "34fc594f",
-          "path": "assets/background1.jpg",
-          "output": "assets/background1.jpg",
-          "name": "background1.jpg",
+        "6ffc5c46": {
+          "id": "6ffc5c46",
+          "path": "js/jquery.countdown.js",
+          "output": "js/jquery.countdown-dist.js",
+          "name": "jquery.countdown.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "6c62833e": {
+          "id": "6c62833e",
+          "path": "assets/background.jpg",
+          "output": "assets/background.jpg",
+          "name": "background.jpg",
           "category": "IMAGE",
-          "size": 191029,
+          "size": 710182,
           "type": "jpg",
-          "initialSize": 191029,
+          "initialSize": 710182,
           "optimized": false,
           "height": 1080,
           "width": 1920
+        },
+        "418f2ff9": {
+          "id": "418f2ff9",
+          "path": "assets/background0.jpg",
+          "output": "assets/background0.jpg",
+          "name": "background0.jpg",
+          "category": "IMAGE",
+          "size": 966258,
+          "type": "jpg",
+          "initialSize": 966258,
+          "optimized": false,
+          "height": 2202,
+          "width": 4287
         }
       },
       "deploymentHistory": {},
